# rust_rest_example

./: .gitignore  Cargo.toml  README.md
day1_1_enums/: Cargo.toml
day1_1_enums/src/: main.rs
day1_1_immutability_and_refs/: Cargo.toml
day1_1_immutability_and_refs/src/: main.rs
day1_1_numbers/: Cargo.toml
day1_1_numbers/src/: main.rs
day1_1_strings/: Cargo.toml
day1_1_strings/src/: main.rs
day1_2_struct_declare/: Cargo.toml
day1_2_struct_declare/src/: main.rs
day2_1_functions_clousures/: Cargo.toml
day2_1_functions_clousures/src/: main.rs
day2_2_dependencies/: Cargo.toml
day2_2_dependencies/src/: main.rs
day2_3_collections/: Cargo.toml
day2_3_collections/src/: main.rs
day3_1_modules_decl/: Cargo.toml
day3_1_modules_decl/src/: main.rs
day3_1_separation/: Cargo.toml
day3_1_separation/src/: main.rs
day3_1_separation/src/pets/: mod.rs
day3_1_separation/src/pets/animals/: cat.rs  dog.rs  mod.rs
day3_1_separation/src/pets/fish/: mod.rs
day3_2_generics/: Cargo.toml
day3_2_generics/src/: main.rs
day3_2_generics/src/bounds/: mod.rs
day3_2_generics/src/enums/: mod.rs
day3_2_generics/src/functions/: mod.rs
day3_2_generics/src/structs/: mod.rs
day3_2_generics/src/traits/: mod.rs
day3_2_generics/src/where_bounds/: mod.rs
day3_3_errors/: Cargo.toml
day3_3_errors/src/: main.rs
day3_3_errors/src/common/: mod.rs
day3_3_errors/src/consume/: mod.rs
day3_3_errors/src/error_type/: mod.rs
docs/: index.md
docs/part1/: hello.md  index.md  summary.md
docs/part1/rust_basics/: index.md
docs/part1/rust_basics/day1/: numbers.md  ownership.md  structs.md
docs/part1/rust_basics/day2/: cargo.md  collections.md  functions.md
docs/part1/rust_basics/day3/: errors.md  generics.md  modules.md
docs/part2/: index.md
migrations/: V2__add_data.sql
src/: handlers.rs  main.rs  model.rs  service.rs
step1/: Cargo.toml
step1/src/: handlers.rs  main.rs
step2/: Cargo.toml
step2/src/: handlers.rs  http_utils.rs  main.rs  model.rs  services.rs
step3/: Cargo.toml  application.yaml
step3/src/: configs.rs  handlers.rs  main.rs  model.rs  services.rs
step4/: Cargo.toml
step4/src/: handlers.rs  model.rs  services.rs
step4/tests/: application.yaml  server_full.yaml
step5/: Cargo.toml
step5/src/: handlers.rs  main.rs  model.rs  services.rs
step6/: Cargo.toml
step6/sql/: create_users_db_objects.sql
step6/src/: main.rs  services.rs
step6/tests/: corrupted.yaml  default_port.yaml  invalid_port_format.yaml
step7/: Cargo.toml  application.yaml
step7/sql/: create_users_database.sql  drop_users_database.sql  drop_users_db_objects.sql
step7/src/: configs.rs  handlers.rs  main.rs  model.rs  services.rs
step7/tests/: db_full.yaml
step_final/: Cargo.toml
step_final/migrations/: V1__initial.sql
step_final/src/: main.rs  migrations.rs  model.rs
