[workspace]
members = [
    "day1_1_numbers", "day1_1_enums", "day1_1_strings", "day1_1_immutability_and_refs",
    "day1_2_struct_declare",
    
    "day2_1_functions_clousures", 
    "day2_2_dependencies",
    "day2_3_collections",

    "day3_1_modules_decl", "day3_1_separation",
    "day3_2_generics",
    "day3_3_errors",

    "step1", 
    "step2"
    #"step_final"
]