[package]
name = "rbatis_example"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# add this library,and cargo install

# bson (required)
serde = { version = "1", features = ["derive"] }
rbson = "2.0"
serde_json = "1.0.79"

# logging lib(required)
log = "0.4"
fast_log="1.5.1"

#async runtime lib
tokio = { version = "1.12", features = ["full"] }

#db drivers
postgres = "0.19.2"
tokio-postgres = "0.7.5"
# db schema migrations
refinery = {version = "0.8.4", features = ["tokio-postgres"]}

# rbatis (required) default is all-database+runtime-async-std-rustls
rbatis =  { version = "3.0" } 
# also if you use actix-web+mysql
# rbatis = { version = "3.0", default-features = false, features = ["mysql","runtime-async-std-rustls"] }

actix-web = "4"