[package]
name = "rest_validation_and_error_handling"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

# json libs
serde = {version = "1.0.138", features = ["derive"]}
serde_json = "1.0.79"

# validation framework
validator = { version = "0.15", features = ["derive", "unic"] }
lazy_static = "1"
regex = "1" 

# web framework
actix-web = "4.1.0"

# config
config = "0.13.1"
