[package]
name = "rest_database_orm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

# json libs
serde = {version = "1.0.138", features = ["derive"]}
serde_json = "1.0.79"

# validation framework
validator = { version = "0.15", features = ["derive", "unic"] }
lazy_static = "1"
regex = "1" 

# web framework
actix-web = "4.1.0"

# config
config = "0.13.1"

# database
#postgres = "0.19.3"
tokio-postgres = "0.7.6"

# orm
rbatis = "3.1.15"
rbson = "2.0.5"

# async framework
tokio = { version = "1.20.0", features = ["full"] }
async-trait = "0.1.56"
futures = "0.3.21"
